<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.galdamez.prueba2navegation.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeconFragment">

    <Button
        android:id="@+id/selectA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seletion1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selectB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Textviewselect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elige_un_dato"
        app:layout_constraintBottom_toTopOf="@+id/nextFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/selectB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seletion2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcion_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectB"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextFramentFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectB"
        app:layout_constraintVertical_bias="0.13" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>